--- a/common/package.json
+++ b/common/package.json
@@ -2,13 +2,13 @@
   "name": "@workspace-hmeqo/common",
   "version": "0.1.0",
   "dependencies": {
-    "@hmeqo/nuxt-web-kit": "0.1.0-beta.15",
-    "@nuxt/eslint": "^1.7.1",
-    "@nuxt/eslint-config": "^1.7.1",
+    "@hmeqo/nuxt-web-kit": "0.1.0-beta.16",
+    "@nuxt/eslint": "^1.8.0",
+    "@nuxt/eslint-config": "^1.8.0",
     "@nuxt/fonts": "^0.11.4",
-    "@nuxt/icon": "^1.15.0",
+    "@nuxt/icon": "^2.0.0",
     "@nuxt/image": "^1.11.0",
-    "@nuxt/kit": "^4.0.2",
+    "@nuxt/kit": "^4.0.3",
     "@nuxt/test-utils": "^3.19.2",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/seo": "^3.1.0",
@@ -17,12 +17,12 @@
     "copy-to-clipboard": "^3.3.3",
     "dayjs": "^1.11.13",
     "defu": "^6.1.4",
-    "eslint": "^9.32.0",
+    "eslint": "^9.33.0",
     "lodash": "^4.17.21",
-    "nuxt": "^4.0.2",
+    "nuxt": "^4.0.3",
     "nuxt-og-image": "^5.1.9",
     "pinia": "^3.0.3",
-    "pinia-plugin-persistedstate": "^4.4.1",
+    "pinia-plugin-persistedstate": "^4.5.0",
     "prettier": "^3.6.2",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4",
@@ -31,8 +31,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.17.20",
-    "openapi-typescript": "^7.8.0",
-    "openapi-typescript-codegen": "^0.29.0",
+    "dotenv": "^16.3.1",
     "rimraf": "^6.0.1"
   }
 }
