--- a/openapi/package.json
+++ b/openapi/package.json
@@ -2,10 +2,8 @@
   "name": "@workspace-hmeqo/openapi",
   "version": "0.1.0",
   "type": "module",
-  "main": "index.ts",
-  "dependencies": {},
-  "devDependencies": {
-    "openapi-typescript": "^7.9.1",
+  "dependencies": {
+    "@hmeqo/openapi-utils": "^0.1.1",
     "openapi-typescript-codegen": "^0.29.0"
   }
 }
