--- a/unocss/package.json
+++ b/unocss/package.json
@@ -2,11 +2,11 @@
   "name": "@workspace-hmeqo/unocss",
   "version": "0.1.0",
   "dependencies": {
-    "@unocss/nuxt": "66.4.2",
-    "@unocss/preset-icons": "66.4.2",
-    "@unocss/preset-wind3": "66.4.2",
-    "@unocss/reset": "66.4.2",
-    "@unocss/transformer-variant-group": "^66.4.2",
-    "unocss": "66.4.2"
+    "@unocss/nuxt": "66.5.1",
+    "@unocss/preset-icons": "66.5.1",
+    "@unocss/reset": "66.5.1",
+    "@unocss/transformer-variant-group": "^66.5.1",
+    "unocss": "66.5.1",
+    "unocss-preset-animations": "^1.2.1"
   }
 }
