--- a/naive-ui/package.json
+++ b/naive-ui/package.json
@@ -2,7 +2,7 @@
   "name": "@workspace-hmeqo/naive-ui",
   "version": "0.1.0",
   "dependencies": {
-    "@bg-dev/nuxt-naiveui": "2.0.0-rc.5",
-    "naive-ui": "^2.43.1"
+    "@bg-dev/nuxt-naiveui": "2.0.0",
+    "naive-ui": "^2.43.2"
   }
 }
