--- a/shadcn-unocss/package.json
+++ b/shadcn-unocss/package.json
@@ -2,14 +2,15 @@
   "name": "@workspace-hmeqo/shadcn-unocss",
   "version": "0.1.0",
   "dependencies": {
-    "@unocss/preset-wind3": "66.5.2",
+    "@unocss/preset-wind3": "66.5.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-vue-next": "^0.544.0",
+    "lucide-vue-next": "^0.556.0",
     "radix-vue": "^1.9.17",
-    "tailwind-merge": "^3.3.1",
-    "unocss": "66.5.2",
-    "unocss-preset-animations": "^1.2.1",
+    "shadcn-nuxt": "^2.4.2",
+    "tailwind-merge": "^3.4.0",
+    "unocss": "66.5.10",
+    "unocss-preset-animations": "^1.3.0",
     "unocss-preset-shadcn": "^1.0.1"
   }
 }
